--- a/style.css
+++ b/style.css
@@ -4,4 +4,6 @@
   background: #FFFFFF;
   background: -webkit-linear-gradient(bottom, #FFFFFF, #5B9CD5);
   background: -moz-linear-gradient(bottom, #FFFFFF, #5B9CD5);
-  background: linear-gradient(to top, #FFFFFF, #5B9CD5);
+  background: linear-gradient(to top, #FFFFFF, #5B9CD5);}
+
+
