--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-.block1 {
+header {
   width: 1683px;
   height: 331px;
   background: #FFFFFF;
   background: -webkit-linear-gradient(bottom, #FFFFFF, #5B9CD5);
   background: -moz-linear-gradient(bottom, #FFFFFF, #5B9CD5);
-  background: linear-gradient(to top, #FFFFFF, #5B9CD5);}
+  background: linear-gradient(to top, #FFFFFF, #5B9CD5);
+}
 
 
