--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ header {
   position:absolute;
   width: 1683px;
   height: 331px;
-  background: -moz-linear-gradient(top,  rgba(91,155,213,1) 0%, rgba(109,166,218,0) 11%, rgba(255,255,255,0) 100%);
+  background: #5B9BD5;
 }
 
 
