--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@ header {
   position:absolute;
   width: 1683px;
   height: 331px;
-  background: #5B9BD5;
+  background-color: #5B9BD5;
 }
 
-
+h1 {
+  font-family: Calibri, sans-serif;
+  font-size: 82pt;
+  font-weight: bold;
+  color: #203864;
+}
