--- a/style.css
+++ b/style.css
@@ -1,13 +1,65 @@
-header {
-  position:absolute;
-  width: 1683px;
-  height: 331px;
-  background: -moz-linear-gradient(top, rgba(91,155,213,1) 0%, rgba(109,166,218,0) 11%, rgba(255,255,255,0) 100%); 
-}
+  header {
+      position:absolute;
+      width: 1683px;
+      height: 331px;
+      background-image: url(img/line1.png);
+      background-repeat: no-repeat;
+    }
 
-h1 {
-  font-family: Calibri, sans-serif;
-  font-size: 41pt;
-  font-weight: bold;
-  color: #203864;
-}
+    h1 {
+      font-family: Calibri, sans-serif;
+      font-size: 60pt;
+      font-weight: bold;
+      color: #203864;
+      text-align: center;
+      position: absolute;
+      top:45px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      z-index: 1;
+    }
+    
+    .logo {
+      background-image: url(img/logo.png);
+      width: 290px;
+      height: 206px;
+      position: relative;
+      left:8px;
+      top:76px;
+    }
+    .names {
+      font-family: Calibri, sans-serif;
+      font-size: 30pt;
+      color: #203864;
+      text-align: center;
+      position: absolute;
+      top:162px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      z-index: 1;
+      line-height: 1.25;
+    } 
+    
+    .school {
+      font-family: Calibri, sans-serif;
+      font-size: 26pt;
+      color: #203864;
+      text-align: center;
+      position: absolute;
+      top:270px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      z-index: 1;
+    }
+    
+    .line2 {
+      width: 1683px;
+      height: 19px;
+      background-image: url(img/line2.png);
+      background-repeat: no-repeat;
+      position: absolute;
+      top: 331px;
+    }
