--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* HEADER */
+
 header {
      position:absolute;
      width: 1683px;
@@ -62,6 +64,60 @@ h1 {
      background-repeat: no-repeat;
      position: absolute;
      top: 331px;
+   }
+
+
+/* MAIN */
+    
+.firstcolumn {
+     position: absolute;
+     top: 383px;
+     left: 33px;
+     width: 797px;
+     height: 1936px;
+     border: solid 3px #5B9BD5;
+     border-radius: 20px;
+   }
+    
+.secondcolumn {
+     position: absolute;
+     top: 383px;
+     left: 847.5px;
+     width: 797px;
+     height: 1936px;
+     border: solid 3px #5B9BD5;
+     border-radius: 20px;
+   }
+
+h2 {
+     font-family: Calibri, sans-serif;
+     font-size: 26pt;
+     color: #203864;
+     text-align: center;
+   }
+
+.text {
+     font-size: 148%;
+     color: #203864;
+     text-align: center;
+   }
+   
+.family {
+     background-image: url(img/family.png);
+     width: 165px;
+     height: 192px;
+     position: relative;
+     left:10px;
+     top:-35px;
+   }
+
+.index {
+     background-image: url(img/index.png);
+     width: 32px;
+     height: 28px;
+     position: relative;
+     left:370px;
+     top:-240px;
    }
 
 h3 {
